--- a/index.html
+++ b/index.html
@@ -4,72 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Master's Student</title>
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <nav>
-            <div class="container">
-                <h1>Your Name</h1>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#research">Research</a></li>
-                    <li><a href="#publications">Publications</a></li>
-                    <li><a href="#cv">CV</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
+        <nav class="container">
+            <a href="#" class="logo">Your Name</a>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#cv">CV</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
+        <!-- Hero Section -->
+        <section id="hero" class="container">
+            <h1>Welcome! I'm [Your Name]</h1>
+            <p class="subtitle">A Master's student at [Your University] specializing in [Your Field of Study].</p>
+        </section>
+
+        <!-- About Me Section -->
         <section id="about" class="container">
             <h2>About Me</h2>
             <div class="about-content">
                 <img src="https://via.placeholder.com/150" alt="A professional headshot of Your Name" class="profile-picture">
-                <p>Write a brief and engaging biography here. Mention your current Master's program, your university, and your primary research interests. You can also include a sentence or two about your academic background and what you are passionate about within your field. This section should give visitors a quick and clear understanding of who you are as a researcher. [3]</p>
+                <div>
+                    <p>Write a brief and engaging biography here. Mention your current Master's program, your university, and your primary research interests. You can also include a sentence or two about your academic background and what you are passionate about within your field. This section should give visitors a quick and clear understanding of who you are as a researcher.</p>
+                </div>
             </div>
         </section>
 
+        <!-- Research Section -->
         <section id="research" class="container">
             <h2>Research</h2>
-            <div class="research-item">
-                <h3>Project Title 1</h3>
-                <p>Provide a detailed description of your current or most significant research project. Explain the research questions, methodologies used, and any preliminary findings. If applicable, you can also mention your supervisors or collaborators on this project.</p>
-            </div>
-            <div class="research-item">
-                <h3>Project Title 2</h3>
-                <p>Describe another research project here. This could be from a previous degree or a different area of interest. Highlighting a variety of projects can showcase the breadth of your skills and knowledge.</p>
+            <div class="card-container">
+                <div class="card">
+                    <h3>Project Title 1</h3>
+                    <p>Provide a detailed description of your current or most significant research project. Explain the research questions, methodologies used, and any preliminary findings. Mention your supervisors or collaborators.</p>
+                </div>
+                <div class="card">
+                    <h3>Project Title 2</h3>
+                    <p>Describe another research project here. This could be from a previous degree or a different area of interest. Highlighting a variety of projects can showcase the breadth of your skills and knowledge.</p>
+                </div>
             </div>
         </section>
 
+        <!-- Publications Section -->
         <section id="publications" class="container">
             <h2>Publications</h2>
-            <div class="publication-item">
-                <p><strong>Your Name</strong>, Co-author Name (Year). "Title of the Publication." <em>Journal or Conference Name</em>, Volume(Issue), pages. <a href="#">[Link to Publication]</a></p>
-            </div>
-            <div class="publication-item">
-                <p>Your Name (Year). "Title of another Publication." <em>Journal or Conference Name</em>, Volume(Issue), pages. <a href="#">[Link to Publication]</a></p>
+            <div class="card-container">
+                 <div class="card publication">
+                    <p><strong>Your Name</strong>, Co-author Name (Year). "Title of the Publication." <em>Journal or Conference Name</em>, Volume(Issue), pages. <a href="#" class="publication-link">Read More</a></p>
+                </div>
+                 <div class="card publication">
+                    <p>Your Name (Year). "Title of another Publication." <em>Journal or Conference Name</em>, Volume(Issue), pages. <a href="#" class="publication-link">Read More</a></p>
+                </div>
             </div>
         </section>
 
+        <!-- CV Section -->
         <section id="cv" class="container">
             <h2>Curriculum Vitae</h2>
-            <p>You can download a current version of my CV by clicking the button below.</p>
-            <a href="path/to/your/cv.pdf" class="button" download>Download CV</a>
+            <p>For a detailed overview of my academic and professional experience, please download my CV.</p>
+            <a href="path/to/your/cv.pdf" class="button" download><i class="fas fa-download"></i> Download CV</a>
         </section>
 
+        <!-- Contact Section -->
         <section id="contact" class="container">
-            <h2>Contact</h2>
-            <p>I am always open to discussing research, collaborations, or other opportunities. Please feel free to reach out to me via email.</p>
-            <p><strong>Email:</strong> <a href="mailto:your.email@university.edu">your.email@university.edu</a></p>
-            <p>You can also find me on the following platforms:</p>
-            <ul class="social-links">
-                <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">Google Scholar</a></li>
-                <li><a href="#">Twitter</a></li>
-            </ul>
+            <h2>Get in Touch</h2>
+            <p>I am always open to discussing research, collaborations, or other opportunities. Please feel free to reach out.</p>
+            <div class="contact-links">
+                <p><i class="fas fa-envelope"></i> <a href="mailto:your.email@university.edu">your.email@university.edu</a></p>
+                <p><i class="fab fa-linkedin"></i> <a href="#">LinkedIn Profile</a></p>
+                <p><i class="fab fa-google-scholar"></i> <a href="#">Google Scholar</a></p>
+            </div>
         </section>
     </main>
 
