--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Master's Student</title>
+    <title>Sajad Ali | Electrical Engineer</title>
 
     <!-- Google Fonts (Poppins) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,10 +18,11 @@
 <body>
     <header>
         <nav class="container">
-            <a href="#" class="logo">Your Name</a>
+            <a href="#" class="logo">Sajad Ali</a>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#research">Research</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -32,7 +33,7 @@
         <!-- Hero Section -->
         <section id="hero">
             <div class="container">
-                <h1>Hello, I'm [Your Name]</h1>
+                <h1>Hello, I'm Sajad Ali</h1>
                 <p class="subtitle">I am a <span id="typing-effect"></span></p>
                 <div class="hero-buttons">
                     <a href="path/to/your/cv.pdf" class="button button-primary" download>Download CV</a>
@@ -45,64 +46,90 @@
         <section id="about" class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <img src="https://via.placeholder.com/250" alt="A professional headshot of Your Name" class="profile-picture">
+                <img src="path/to/your/photo.jpg" alt="A professional headshot of Sajad Ali" class="profile-picture">
                 <div class="about-text">
-                    <h3>A passionate researcher and student.</h3>
-                    <p>Write your biography here. Talk about your Master's program, your university, and research interests. Explain what drives you and what you hope to achieve. Make it personal but professional.</p>
-                    <p>You can add another paragraph to elaborate on your background, specific skills, or long-term career goals. This helps visitors understand your journey.</p>
+                    <h3>A passionate postgraduate in Electrical Engineering.</h3>
+                    <p>As a postgraduate in electrical engineering, I am passionate about pursuing a career in power systems and eager to leverage my knowledge and skills to contribute meaningfully to the field while achieving professional growth. A strong focus on practical coursework, hands-on laboratory work, and real-world projects marked my undergraduate experience.</p>
+                    <p>These have equipped me with a solid foundation in electrical principles and theories. Proficient in technical skills such as power system analysis, MV/HV network design, and energy engineering, I am well-equipped to address advanced challenges in the field of power systems.</p>
                 </div>
             </div>
         </section>
 
-        <!-- Skills Section -->
-        <section id="skills" class="container">
-            <h2 class="section-title">Core Competencies</h2>
-            <div class="skills-grid">
-                <div class="skill-card">
-                    <i class="fas fa-flask"></i>
-                    <h3>Lab Technique</h3>
-                    <p>e.g., PCR, Western Blot, Cell Culture</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-chart-line"></i>
-                    <h3>Data Analysis</h3>
-                    <p>e.g., R, Python, SPSS, MATLAB</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-book-open"></i>
-                    <h3>Literature Review</h3>
-                    <p>Systematic reviews, meta-analyses</p>
-                </div>
-                 <div class="skill-card">
-                    <i class="fas fa-file-alt"></i>
-                    <h3>Academic Writing</h3>
-                    <p>Grant proposals, manuscript preparation</p>
-                </div>
-            </div>
-        </section>
-
-
-        <!-- Research Section -->
-        <section id="research" class="container">
-            <h2 class="section-title">Research Projects</h2>
+        <!-- Work Experience Section -->
+        <section id="experience" class="container">
+            <h2 class="section-title">Work Experience</h2>
             <div class="project-grid">
                 <div class="project-card">
                     <div class="project-content">
-                        <h3>Project Title 1</h3>
-                        <p>A concise but informative description of the research project. Outline the key objectives, methods, and your specific role or contribution.</p>
+                        <h3>Teaching Assistant</h3>
+                        <p><strong>Sukkur IBA University</strong> | 15/01/2025 – CURRENT</p>
                         <div class="project-tags">
-                            <span>Tag One</span>
-                            <span>Tag Two</span>
+                            <span>Academia</span>
+                            <span>Teaching</span>
                         </div>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-                        <h3>Project Title 2</h3>
-                        <p>Another description for a different project. Focus on the impact and the skills you developed. Highlighting variety is a good strategy.</p>
+                        <h3>Networks Engineer</h3>
+                        <p><strong>NETS International, Pakistan</strong> | 02/01/2023 – 01/01/2025</p>
+                        <p>Managed power distribution, ensured system compliance with safety standards, and provided technical support for hardware-related issues.</p>
+                         <div class="project-tags">
+                            <span>Power Management</span>
+                            <span>Quality Assurance</span>
+                            <span>ICT</span>
+                        </div>
+                    </div>
+                </div>
+                 <div class="project-card">
+                    <div class="project-content">
+                        <h3>Trainee Electrical Engineer</h3>
+                        <p><strong>Sukkur Electric Power Supply Company</strong> | 01/12/2022 - 31/12/2022</p>
+                        <p>Worked with the protection and inspection team, assisting in data monitoring, annual maintenance, and repair of grid equipment like relays and transformers.</p>
+                         <div class="project-tags">
+                            <span>Grid Maintenance</span>
+                            <span>Inspection & Testing</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Projects Section -->
+        <section id="projects" class="container">
+            <h2 class="section-title">Projects</h2>
+            <div class="project-grid">
+                <div class="project-card">
+                    <div class="project-content">
+                        <h3>Reactor Placement in IEEE 9 –Bus Mesh Distribution System</h3>
+                        <p>Analysis of different parameters on PSSE (Power System Simulator for Engineering).</p>
                         <div class="project-tags">
-                            <span>Tag Three</span>
-                            <span>Tag Four</span>
+                            <span>PSSE</span>
+                            <span>Distribution System</span>
+                            <span>Simulation</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-content">
+                        <h3>PLC Based Motor Speed Monitoring System</h3>
+                        <p>Developed a system to monitor and control motor speed using a Programmable Logic Controller.</p>
+                        <div class="project-tags">
+                            <span>PLC</span>
+                            <span>Automation</span>
+                            <span>Monitoring</span>
+                        </div>
+                    </div>
+                </div>
+                 <div class="project-card">
+                    <div class="project-content">
+                        <h3>Variable Power Supply (220AC to 0/12V DC)</h3>
+                        <p>Designed and built a variable DC power supply unit for laboratory and testing purposes.</p>
+                        <div class="project-tags">
+                            <span>Electronics</span>
+                            <span>Hardware</span>
+                            <span>Power Supply</span>
                         </div>
                     </div>
                 </div>
@@ -114,10 +141,7 @@
              <h2 class="section-title">Publications</h2>
              <div class="publication-list">
                  <div class="publication-item">
-                     <p><strong>Your Name</strong>, Co-author (Year). "Title of Publication." <em>Journal Name</em>. <a href="#">[DOI Link]</a></p>
-                 </div>
-                 <div class="publication-item">
-                     <p><strong>Your Name</strong> (Year). "Title of Conference Paper." <em>Conference Proceedings</em>. <a href="#">[Link]</a></p>
+                     <p>S. Ali, K. Kumar, F. S. Alromithy, M. R. Altimania, Q. Ali and H. M. Munir, "Torque Ripple Minimization of IPM Spoke Type Motor," 2025 19th Conference on Electrical Machines, Drives and Power Systems (ELMA), Sofia, Bulgaria, 2025, pp. 1-5. <a href="https://ieeexplore.ieee.org/document/11083385" target="_blank">[View on IEEE Xplore]</a></p>
                  </div>
              </div>
         </section>
@@ -126,18 +150,17 @@
         <section id="contact" class="container">
             <h2 class="section-title">Get in Touch</h2>
             <p class="contact-subtitle">I'm currently open to collaborations and new opportunities. My inbox is always open!</p>
-            <a href="mailto:your.email@university.edu" class="button button-primary">Say Hello</a>
+            <a href="mailto:sajad.siba@gmail.com" class="button button-primary">Say Hello</a>
         </section>
     </main>
 
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-google-scholar"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/sajadali7/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://join.skype.com/invite/v2YvYzgZcI2n" target="_blank"><i class="fab fa-skype"></i></a>
             </div>
-            <p>&copy; 2025 Your Name. Built with passion.</p>
+            <p>&copy; 2025 Sajad Ali. All Rights Reserved.</p>
         </div>
     </footer>
 
