--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <section id="hero">
             <div class="container">
                 <h1>Hello, I'm Sajad Ali</h1>
-                <p class="subtitle">I am a <span id="typing-effect"></span></p>
+                <p class="subtitle">I am an <span id="typing-effect"></span></p>
                 <div class="hero-buttons">
-                    <a href="path/to/your/cv.pdf" class="button button-primary" download>Download CV</a>
+                    <a href="Sajad Academia.pdf" class="button button-primary" download>Download CV</a>
                     <a href="#contact" class="button">Contact Me</a>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                 <img src="path/to/your/photo.jpg" alt="A professional headshot of Sajad Ali" class="profile-picture">
                 <div class="about-text">
                     <h3>A passionate postgraduate in Electrical Engineering.</h3>
-                    <p>As a postgraduate in electrical engineering, I am passionate about pursuing a career in power systems and eager to leverage my knowledge and skills to contribute meaningfully to the field while achieving professional growth. A strong focus on practical coursework, hands-on laboratory work, and real-world projects marked my undergraduate experience.</p>
+                    <p>As a postgraduate in electrical engineering, I am passionate about pursuing a career in Electrical Machines, Power Systems and Power Electronics. I am eager to leverage my knowledge and skills to contribute meaningfully to the field while achieving professional growth. A strong focus on practical coursework, hands-on laboratory work, and real-world projects marked my undergraduate experience.</p>
                     <p>These have equipped me with a solid foundation in electrical principles and theories. Proficient in technical skills such as power system analysis, MV/HV network design, and energy engineering, I am well-equipped to address advanced challenges in the field of power systems.</p>
                 </div>
             </div>
